@@ -1,3 +1,8 @@
+ags (3.7.33)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* minor improvements
+
 ags (3.7.32)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
